--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,15 @@
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
+    "qrcode": "^1.5.0",
+    "socket.io": "^4.4.1",
+    "speakeasy": "^2.0.0",
     "uuid": "^8.3.2",
+    "validator": "^13.7.0",
+    "vuex": "^4.0.2",
     "zlib": "^1.0.5"
   }
 }
