--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,19 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vue/runtime-dom": "^3.2.31",
+    "@vue/server-renderer": "^3.2.31",
+    "@vueuse/head": "^0.7.5",
     "axios": "^0.26.1",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "vite-ssr": "^0.15.0",
     "vue": "^3.2.31",
     "vue-cookie": "^1.1.4",
     "vue-router": "^4.0.14",
-    "vue3-cookies": "^1.0.6"
+    "vue-socket.io": "^3.0.10",
+    "vue3-cookies": "^1.0.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
